college theme - fix double scrollbars.

--- a/openscholar/themes/hwpi_college/css/hwpi_college.css
+++ b/openscholar/themes/hwpi_college/css/hwpi_college.css
@@ -43,11 +43,7 @@ blockquote {
 #footer .region-inner {
     padding-top: 0;
 }
-#branding_footer .branding-container {
-    font-family: arial;
-    font-weight: normal;
-    line-height: 45px;
-}
+
 .branding-container, #header-container, #columns, #menu-bar #block-os-primary-menu, #footer .gpanel, .region-footer, .message-inner, #powerby-login {
     margin-left: auto;
     margin-right: auto;
@@ -180,7 +176,7 @@ padding-right: 0;
 #branding_footer a, #branding_header a {
     color: #BAC5C6;
     font-family: arial,serif;
-    font-size: 13px;
+    font-size: .91em;
 }
 
 .region-header-third ul.nice-menu a {
